# archive

./: CMakeLists.txt  README.md  archive.linux-arm  archive.linux-x86  archive.mac-uni  archive.mac-x86  main.cpp
includes/: mkMultpleDir.hpp  mkdir_p.hpp
my_lib/: arc_locale.cpp  arc_locale.hpp  argparse_archive.cpp  argparse_archive.hpp  find.cpp  find.hpp  fr.en_strings.hpp  getFrancais.hpp  scan.cpp  scan.hpp
